# docs/swagger/install-v1.yaml
@@ -3369,6 +3369,75 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/CloudResourceResponse"
+  /install/v1/target-sources/{targetSourceId}/jira-ticket:
+    get:
+      tags:
+      - Target Sources
+      summary: Get Jira ticket by target source ID
+      description: Gets the Jira ticket mapped to the target source
+      operationId: getIssueByTargetSourceId
+      parameters:
+      - name: targetSourceId
+        in: path
+        description: Target source ID
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "400":
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorMessage"
+        "502":
+          description: Bad Gateway
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorMessage"
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorMessage"
+        "403":
+          description: Forbidden
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorMessage"
+        "409":
+          description: Conflict
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorMessage"
+        "503":
+          description: Service Unavailable
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorMessage"
+        "501":
+          description: Not Implemented
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorMessage"
+        "404":
+          description: Not Found
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorMessage"
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
   /install/v1/target-sources/{targetSourceId}/process-status:
     get:
       tags:
@@ -6498,6 +6567,28 @@ paths:
                 type: object
 components:
   schemas:
+    JiraTicketResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        targetSourceId:
+          type: integer
+          format: int64
+        serviceCode:
+          type: string
+        issueKey:
+          type: string
+        cloudProvider:
+          type: string
+          enum:
+          - AWS
+          - GCP
+          - AZURE
+          - IDC
+          - SDU
+          - UNKNOWN
     ErrorMessage:
       type: object
       properties:
